struktur-data/102_double-linked-list/error-02-main
In file included from 02-main.c:4:0:
02-function.h:1:1: error: unknown type name ‘llist’
 llist inis() {
 ^
02-function.h: In function ‘inis’:
02-function.h:2:5: error: unknown type name ‘llist’
     llist L;
     ^
02-function.h:4:6: error: request for member ‘head’ in something not a structure or union
     L.head = NULL;
      ^
02-function.h:5:6: error: request for member ‘tail’ in something not a structure or union
     L.tail = NULL;
      ^
02-function.h: At top level:
02-function.h:9:1: error: unknown type name ‘node’
 node *buatNode(int i, char n[]) {
 ^
02-function.h: In function ‘buatNode’:
02-function.h:10:5: error: unknown type name ‘node’
     node *nn;
     ^
02-function.h:12:24: error: ‘node’ undeclared (first use in this function)
     nn = malloc(sizeof(node));
                        ^
02-function.h:12:24: note: each undeclared identifier is reported only once for each function it appears in
02-function.h:13:7: error: request for member ‘id’ in something not a structure or union
     nn->id = i;
       ^
02-function.h:14:14: error: request for member ‘nama’ in something not a structure or union
     strcpy(nn->nama,n);
              ^
02-function.h:15:7: error: request for member ‘next’ in something not a structure or union
     nn->next = NULL;
       ^
02-function.h:16:7: error: request for member ‘prev’ in something not a structure or union
     nn->prev = NULL;
       ^
02-function.h: At top level:
02-function.h:20:1: error: unknown type name ‘llist’
 llist addDepan(llist L, int i, char n[]) {
 ^
02-function.h:20:16: error: unknown type name ‘llist’
 llist addDepan(llist L, int i, char n[]) {
                ^
02-function.h:34:1: error: unknown type name ‘llist’
 llist addBelakang(llist L, int i, char n[]) {
 ^
02-function.h:34:19: error: unknown type name ‘llist’
 llist addBelakang(llist L, int i, char n[]) {
                   ^
02-function.h:48:1: error: unknown type name ‘llist’
 llist sisipUrut(llist L, int i, char n[]) {
 ^
02-function.h:48:17: error: unknown type name ‘llist’
 llist sisipUrut(llist L, int i, char n[]) {
                 ^
02-function.h:79:1: error: unknown type name ‘llist’
 llist sisipNode(llist L, int pos, int i, char n[]) {
 ^
02-function.h:79:17: error: unknown type name ‘llist’
 llist sisipNode(llist L, int pos, int i, char n[]) {
                 ^
02-function.h:103:1: error: unknown type name ‘llist’
 llist delDepan(llist L) {
 ^
02-function.h:103:16: error: unknown type name ‘llist’
 llist delDepan(llist L) {
                ^
02-function.h:117:1: error: unknown type name ‘llist’
 llist delBelakang(llist L) {
 ^
02-function.h:117:19: error: unknown type name ‘llist’
 llist delBelakang(llist L) {
                   ^
02-function.h:131:1: error: unknown type name ‘llist’
 llist delKe(llist L, int pos) {
 ^
02-function.h:131:13: error: unknown type name ‘llist’
 llist delKe(llist L, int pos) {
             ^
02-function.h:161:1: error: unknown type name ‘llist’
 llist delID(llist L, int i) {
 ^
02-function.h:161:13: error: unknown type name ‘llist’
 llist delID(llist L, int i) {
             ^
02-function.h:185:12: error: unknown type name ‘llist’
 void cetak(llist L) {
            ^
02-main.c: In function ‘main’:
02-main.c:10:10: error: incompatible types when assigning to type ‘llist {aka struct linklist}’ from type ‘int’
     DATA = inis();
          ^
02-main.c:11:12: warning: implicit declaration of function ‘addDepan’ [-Wimplicit-function-declaration]
     DATA = addDepan(DATA,23,"test");
            ^
02-main.c:11:10: error: incompatible types when assigning to type ‘llist {aka struct linklist}’ from type ‘int’
     DATA = addDepan(DATA,23,"test");
          ^
02-main.c:12:5: warning: implicit declaration of function ‘cetak’ [-Wimplicit-function-declaration]
     cetak(DATA);
     ^
